--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
+    "core-decorators": "^0.20.0",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "core-decorators": "^0.20.0",
-    "grunt": "^1.0.2"
+    "react": "^16.2.0",
+    "react-overlays": "^0.8.3"
   }
 }
