--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@lxndr/react-webui",
   "version": "1.0.0-alpha.1",
   "description": "Simple Web Widgets",
-  "webpack": "src/index.js",
+  "main": "src/index.js",
   "author": "lxndr",
   "license": "ISC",
+  "scripts": {
+    "lint": "eslint ./src"
+  },
   "dependencies": {
     "classnames": "^2.2.5",
     "core-decorators": "^0.20.0",
@@ -12,5 +15,13 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-overlays": "^0.8.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
+    "eslint-config-xo-react": "^0.16.0",
+    "eslint-config-xo-space": "^0.18.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
