--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "author": "lxndr",
   "license": "ISC",
+  "repository": "github:lxndr/react-webui",
+  "private": true,
   "scripts": {
     "lint": "eslint ./src"
   },
@@ -12,8 +14,11 @@
     "classnames": "^2.2.5",
     "core-decorators": "^0.20.0",
     "lodash": "^4.17.5",
-    "prop-types": "^15.6.0",
+    "moment": "^2.21.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-datepicker": "^1.2.2",
+    "react-dom": "^16.2.0",
     "react-overlays": "^0.8.3"
   },
   "devDependencies": {
